@@ -1,3 +1,12 @@
+2021-05-18  Alex Christensen  <achristensen@webkit.org>
+
+        Allow SafariForWebKitDevelopment to launch successfully
+        https://bugs.webkit.org/show_bug.cgi?id=223551
+
+        Suggested by BJ Burg. Reviewed by Tim Horton.
+
+        * UIProcess/Inspector/mac/WebInspectorUIProxyMac.mm:
+
 2021-05-18  Ryosuke Niwa  <rniwa@webkit.org>
 
         Enabling IPC testing API should prevent WebContent process from getting terminated in more cases
